--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ scikit-learn==0.19.2
 scipy==1.1.0
 selenium==3.14.0
 six==1.11.0
-urllib3==1.23
+urllib3>=1.24.2
 virtualenv==16.0.0
 virtualenv-clone==0.3.0
 wincertstore==0.2
